tests/should_fail/bug/snapshot_typecheck.stderr
error[E0282]: type annotations needed for `creusot_std::snapshot::Snapshot<std::option::Option<_>>`
 --> snapshot_typecheck.rs:4:9
  |
4 |     let s = snapshot!(None);
  |         ^             ---- type must be known at this point
  |
help: consider giving `s` an explicit type, where the type for type parameter `T` is specified
  |
4 |     let s: creusot_std::snapshot::Snapshot<std::option::Option<T>> = snapshot!(None);
  |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
